Remove backup of Terraform state file to clean up repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Terraform/.terraform.tfstate
-Terraform/.terraform.tfstate.backup 
+Terraform/terraform.tfstate
+Terraform/terraform.tfstate.backup 
 Terraform/.terraform.lock.hcl
 Terraform/.terraform/*
 
